--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,29 @@
+html,
+body {
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 span.brand {
+}
+
+main {
+  flex: 1 0 auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+footer {
+  /* position: absolute;
+  left: 0;
+	bottom: 0; */
+  flex: 0 0 auto;
+  width: 100%;
+  height: 80px;
+  background-color: #010101;
+  color: #fff;
 }
