--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,7 @@ main {
 footer {
   flex: 0 0 auto;
   width: 100%;
-  height: 80px;
-  background-color: #010101;
+  background-color: #343a40;
   color: #fff;
 }
 
