--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@ body {
   height: 100%;
 }
 
+.dropdown-divider {
+  margin: 40px 0;
+}
+
 #root {
   display: flex;
   flex-direction: column;
@@ -26,7 +30,30 @@ footer {
   font-family: 'Cabin Sketch', cursive;
 }
 
+h1 {
+  margin-top: 40px;
+}
+
 span.medium {
   font-size: 2rem;
   line-height: 2rem;
+}
+
+.shopfor {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.shopfor h2 {
+  margin: 0;
+}
+
+.shopfor a {
+  color: #000;
+}
+
+.card-img-top {
+  padding: 1.25rem;
 }
