--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@ body {
   height: 100%;
 }
 
+.dropdown-divider {
+  margin: 40px 0;
+}
+
 #root {
   display: flex;
   flex-direction: column;
@@ -26,4 +30,27 @@ footer {
   height: 80px;
   background-color: #010101;
   color: #fff;
+}
+
+h1 {
+  margin-top: 40px;
+}
+
+.shopfor {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.shopfor h2 {
+  margin: 0;
+}
+
+.shopfor a {
+  color: #000;
+}
+
+.card-img-top {
+  padding: 1.25rem;
 }
