--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 html,
 body {
   height: 100%;
+  font-family: 'Roboto';
 }
 
 .dropdown-divider {
@@ -30,30 +31,42 @@ footer {
   font-family: 'Cabin Sketch', cursive;
 }
 
-h1 {
-  margin-top: 40px;
-}
 
 span.medium {
   font-size: 2rem;
   line-height: 2rem;
 }
 
-.shopfor {
+.home-container {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 40px;
 }
 
-.shopfor h2 {
-  margin: 0;
+.home-container > div.row {
+  max-width: 792px;
 }
 
-.shopfor a {
-  color: #000;
+.home-container div.col-12 {
+  margin-bottom: 2rem;
 }
 
-.card-img-top {
-  padding: 1.25rem;
+.home-container p {
+  margin-bottom: 0;
+}
+
+@media (max-width: 792px) {
+  .home-container {
+    flex-direction: column-reverse;
+  }
+}
+
+.navbar-nav {
+  flex-direction: row;
+}
+
+.navbar-nav .nav-link {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
